<resources>
    <string name="app_name" translatable="false">Bing News</string>
    <string name="app_db" translatable="false">bing_bm_database</string>
    <string name="search_hint">Search news</string>

    <!--Navigation_menu-->
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_preferences">Preferences</string>
    <string name="menu_nav_search">Search</string>
    <string name="menu_nav_bookmarks">Bookmarks</string>
    <string name="menu_nav_terms">Terms and conditions</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="label_trending">Trending</string>
    <string name="label_bookmarks">Bookmarks</string>
    <string name="label_search">Searches</string>
    <string name="label_results">Results</string>
    <string name="label_terms">Terms and conditions</string>

    <string name="no_searches">No results</string>
    <string name="no_bookmarks">No bookmarks yet!</string>
    <string name="title_activity_maps">Map</string>

    <!-- SharedPreferences -->
    <string name="preference_key_file" translatable="false">Preferences</string>
    <string name="pref_key_safe" translatable="false">Safe</string>
    <string name="pref_key_category" translatable="false">Category</string>
    <string name="pref_key_language" translatable="false">Language</string>
    <string name="pref_key_freshness" translatable="false">Freshnes</string>
    <string name="pref_key_since" translatable="false">Since</string>
    <string name="pref_key_location" translatable="false">Location</string>
    <string name="pref_key_cc" translatable="false">Country code</string>

    <!-- Labels & texts -->
    <string name="pref_no_location">Select a country for the results on the map</string>
    <string name="pref_label_safe_search">Safe search</string>
    <string name="pref_label_location">Location</string>
    <string name="pref_label_since">Since</string>
    <string name="pref_label_reset">Reset</string>
    <string name="pref_label_save">Save</string>

    <!-- Categories labels-->
    <string-array name="pref_categories">
        <item>Category</item>
        <item>All</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>LifeStyle</item>
        <item>Politics</item>
        <item>Science</item>
        <item>Sports</item>
        <item>World</item>
    </string-array>
    <!-- Values -->
    <string-array name="pref_cat_values">
        <item></item>
        <item></item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>LifeStyle</item>
        <item>Politics</item>
        <item>ScienceAndTechnology</item>
        <item>Sports</item>
        <item>World</item>
    </string-array>

    <!-- Languages -->
    <string-array name="pref_langs">
        <item>Language</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <!-- Values -->
    <string-array name="pref_langs_values">
        <item></item>
        <item>en</item>
        <item>es</item>
    </string-array>

    <!-- Freshness -->
    <string-array name="pref_freshness">
        <item>Freshness</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <!-- Values -->
    <string-array name="pref_freshness_values">
        <item></item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <!-->Since<-->
    <string-array name="pref_since">
        <item>Since</item>
        <item>Choose your date</item>
    </string-array>

    <!-- Error Strings-->
    <string name="error_network_connection">Check your Internet connection</string>
    <string name="error_network_service">Service is not available now, please try again later</string>
    <string name="error_consult">Something happened, please try again later</string>
    <string name="pref_label_saved_successful">Saved successfull</string>
    <string name="pref_date_title">Change date</string>
    <string name="pref_date_reset">Reset date</string>
    <string name="pref_date_edit">Set date</string>
    <string name="trending_no_more_news">No more news</string>


</resources>